@@ -1,3 +1,8 @@
+Mon Aug 30 11:25:04 CEST 2004 Daniel Veillard <veillard@redhat.com>
+
+	* configure.in gamin.spec.in: oops apparently I forgot to commit
+	  the 0.0.8 release changes.
+
 Thu Aug 26 17:28:57 CEST 2004 Daniel Veillard <veillard@redhat.com>
 
 	* server/gam_dnotify.c server/gam_poll.c server/gam_server.c: 
